--- a/BikeshareStrikeAnalysis.Rmd
+++ b/BikeshareStrikeAnalysis.Rmd
@@ -251,9 +251,10 @@ summary(lm_tripRate3)
 coef_diff_all <- lm_tripRate3$coefficients[4]-lm_tripRate3$coefficients[5]
 coef_diff_all
 
-K_matrix <- matrix(c(rep(0,3),1,-1,rep(0,6)),1)
+K_matrix <- matrix(c(rep(0,3),-1,1,rep(0,6)),1)
 t_all <- glht(lm_tripRate3, K_matrix)
 summary(t_all)
+confint(t_all)
 
 table3_2 <- cbind(lm_tripRate3$coefficients, confint(lm_tripRate3))
 
@@ -262,10 +263,10 @@ table3_2
 tripPhilly_fitted3 <- lm_tripRate3$fitted.values
 
 lm_plot_tripRate3 <- ggplot(data=trip_Philly) +
-  # geom_line(aes(x = start_time, y = by100000, colour="Observed data")) +
-  # geom_line(aes(x = start_time, y = tripPhilly_fitted, colour = "Fitted data")) +
-  geom_line(aes(x = start_time, y = by100000), colour = "black") +
-  geom_line(aes(x = start_time, y = tripPhilly_fitted3), colour = "gray70", linetype = "dashed") +
+  geom_line(aes(x = start_time, y = by100000, colour="Observed data")) +
+  geom_line(aes(x = start_time, y = tripPhilly_fitted3, colour = "Fitted data")) +
+  # geom_line(aes(x = start_time, y = by100000), colour = "black") +
+  # geom_line(aes(x = start_time, y = tripPhilly_fitted3), colour = "gray70", linetype = "dashed") +
   theme_classic() +
   xlab("") +
   ylab('Trips per 100K people') +
@@ -390,6 +391,7 @@ coef_diff_mem
 
 t_mem <- glht(lm_tripRate_mem2, K_matrix)
 summary(t_mem)
+confint(t_mem)
 
 table3_4 <- cbind(lm_tripRate_mem2$coefficients, confint(lm_tripRate_mem2))
 
@@ -473,6 +475,7 @@ coef_diff_short
 
 t_short <- glht(lm_tripRate_short2, K_matrix)
 summary(t_short)
+confint(t_short)
 
 table3_6 <- cbind(lm_tripRate_short2$coefficients, confint(lm_tripRate_short2))
 
@@ -495,6 +498,28 @@ lm_plot_short2 <- ggplot(trip_Philly_short) +
 plot(lm_plot_short2)
 
 ```
+
+###Plot the three figures (all users, members, non-members) from the three models that account for pre-strike, strike, and post-strike periods
+```{r}
+##Prepare the dataframe
+observed_data <- c(trip_Philly$by100000, Philly_mem, Philly_short)
+fitted_data <- c(tripPhilly_fitted3, fitted_all2, fitted_all_short2)
+plot_x <- as.Date(rep(trip_Philly$start_time,6))
+plot_y <- c(observed_data,fitted_data)
+data_type <- rep(c(rep("All users", 366), rep("Members", 366), rep("Non-members",366)),2)
+type <- c(rep("Observed", 366*3), rep("Fitted", 366*3))
+
+final_data <- data.frame(plot_x=plot_x, plot_y=plot_y, data_type=data_type, values=type)
+
+ggplot(data=final_data) +
+  aes(x=plot_x, y=plot_y, color = type, group = values) +
+  geom_line() +
+  facet_grid( data_type~.)+
+  xlab("")+
+  ylab("Trips per 100K people")
+
+```
+
 
 ### Subset to create datasets for each city
 
